--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
       KAFKA_CONTROLLER_QUORUM_VOTERS: 1@localhost:9093
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,EXTERNAL:PLAINTEXT,CONTROLLER:PLAINTEXT
       CLUSTER_ID: 8PSE0GzTRqGdlGcX0TWKJg
+      KAFKA_HEAP_OPTS: "-Xmx400m -Xms400m"
     networks:
       - microservices-net
 
