--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,11 @@ services:
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,EXTERNAL:PLAINTEXT,CONTROLLER:PLAINTEXT
       CLUSTER_ID: 8PSE0GzTRqGdlGcX0TWKJg
       KAFKA_HEAP_OPTS: "-Xmx400m -Xms400m"
+    healthcheck:
+      test: ["CMD", "nc", "-z", "localhost", "9092"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     networks:
       - microservices-net
 
@@ -32,7 +37,8 @@ services:
     image: provectuslabs/kafka-ui:v0.7.2
     container_name: kafka-ui
     depends_on:
-      - kafka
+      kafka:
+        condition: service_healthy
     ports:
       - "8080:8080"
     environment:
@@ -53,7 +59,8 @@ services:
       - KAFKA_BROKERS=kafka:9092
       - CLIENT_URL=http://localhost:3000
     depends_on:
-      - kafka
+      kafka:
+        condition: service_healthy
     restart: unless-stopped
     networks:
       - microservices-net
@@ -70,7 +77,8 @@ services:
       - EMAIL_USER=soniwdew@gmail.com
       - EMAIL_PASSWORD=vlwp zcal mrrw bzix
     depends_on:
-      - kafka
+      kafka:
+        condition: service_healthy
     restart: unless-stopped
     networks:
       - microservices-net
@@ -82,7 +90,8 @@ services:
     environment:
       - KAFKA_BROKERS=kafka:9092
     depends_on:
-      - kafka
+      kafka:
+        condition: service_healthy
     restart: unless-stopped
     networks:
       - microservices-net
@@ -94,7 +103,8 @@ services:
     environment:
       - KAFKA_BROKERS=kafka:9092
     depends_on:
-      - kafka
+      kafka:
+        condition: service_healthy
     restart: unless-stopped
     networks:
       - microservices-net
