--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -111,7 +111,8 @@ services:
 
   tenant-service:
     build:
-      context: ./Service/tenant-service
+      context: ./Service
+      dockerfile: ./tenant-service/Dockerfile
     container_name: tenant-service
     env_file:
       - ./Service/tenant-service/.env
@@ -123,7 +124,8 @@ services:
   
   product-service:
     build:
-      context: ./Service/product-service
+      context: ./Service
+      dockerfile: ./product-service/Dockerfile
     container_name: product-service
     env_file:
       - ./Service/product-service/.env
@@ -141,6 +143,9 @@ services:
       - "7000:7000"
     environment:
       - PAYMENT_SERVICE_BASE=http://payment-service:8000/payment-service
+      - TENANT_SERVICE_BASE=http://tenant-service:4100/api
+      - PRODUCT_SERVICE_BASE=http://product-service:4300/api
+      - GATEWAY_ALLOWED_ORIGINS=http://localhost:3000
       - CLIENT_URL=http://localhost:3000
     depends_on:
       - payment-service
